--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -499,6 +499,8 @@
 
     <a href="https://mp.weixin.qq.com/s/6OkobO8Y7TELa1QAki18RA" target="_blank">FAIR研究员：重新思考BatchNorm中的"Batch"</a>
     |
+    <a href="https://mp.weixin.qq.com/s/XgABQiUVlbsghZxdI1WHYw" target="_blank">PyTorch 51.BatchNorm和Dropout层的不协调现象</a>
+    |
 
 
 <!--   <br /> -->
@@ -524,6 +526,8 @@
     <a href="https://mp.weixin.qq.com/s/9sXeG3wVdiigKrXGycHe1g" target="_blank">Jupyter Notebook 的那些高效率操作</a>
     |
     <a href="https://mp.weixin.qq.com/s/eYrlhATeB-SiP7qyEfXzJg" target="_blank">JupyterLab 3.0，极其强大的下一代 notebook！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/8AKInHu-_dqmtPXZQgWzsg" target="_blank">Web版VS Code上线：最好用的IDE终于发布网页版，然而微软发完秒删</a>
     |
 <!--   <br /> -->
 
@@ -928,7 +932,7 @@ NLP/KG field：
     <a href="https://duyutang.github.io/" target="_blank">Duyu Tang</a> 
     |
 <!-- USA -->
-    <a href="http://www.meng-jiang.com/pubs.html" target="_blank">Meng Jiang</a> 
+    <a href="http://www.meng-jiang.com/pubs.html" target="_blank">Meng Jiang</a>
     |
     <a href="https://ttic.uchicago.edu/~freda/index.html" target="_blank">Haoyue Shi</a> 
     |
@@ -939,6 +943,8 @@ NLP/KG field：
     <a href="http://pfliu.com/#" target="_blank">Pengfei Liu</a> 
     |
     <a href="https://ziyuyao.org/" target="_blank">Ziyu Zhao</a> 
+    |
+    <a href="https://cgraywang.github.io/" target="_blank">Chenguang Wang</a>
     |
 <!-- Canada -->
     <a href="https://sites.ualberta.ca/~bang3/index.html" target="_blank">Bang Liu</a> 
@@ -966,6 +972,9 @@ NLP/KG field：
 <!-- Institute of Automation, Chinese Academy of Sciences -->
     Yubo Chen <a href="http://www.nlpr.ia.ac.cn/cip/yubochen/index.html" target="_blank">(En)</a> <a href="http://www.nlpr.ia.ac.cn/cip/yubochen/index_cn.html" target="_blank">(Cn)</a>
     |
+<!-- Renmin University of China -->
+    <a href="https://xiaojingzi.github.io/" target="_blank">Jing Zhang</a>
+    |
 <!-- Beijing University of Posts and Telecommunications-->
     <a href="http://nlp.csai.tsinghua.edu.cn/~yangcheng/" target="_blank">Cheng Yang</a>
     |
@@ -974,14 +983,14 @@ NLP/KG field：
 <!-- Zhejiang University-->
     <a href="https://zxlzr.github.io/" target="_blank">Ningyu Zhang</a>
     |
+
+    <a href="https://person.zju.edu.cn/jieyang#0" target="_blank">Jie Yang</a>
+    |
 <!-- Southeast University-->
     <a href="http://seu.wangmengsd.com/" target="_blank">Meng Wang</a>
     |
-    <a href="https://xiaojingzi.github.io/" target="_blank">Jing Zhang</a>
-    |
-    <a href="https://cgraywang.github.io/" target="_blank">Chenguang Wang</a>
-    |
-    <a href="https://person.zju.edu.cn/jieyang#0" target="_blank">Jie Yang</a>
+<!-- Southwestern University of Finance and Economics -->
+    <a href="https://it.swufe.edu.cn/info/1107/7549.htm" target="_blank">Qiang Gao</a>
     |
     <a href="https://wilburone.github.io/index.html#" target="_blank">Lifu Huang</a>
     |
