--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -509,7 +509,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/XgABQiUVlbsghZxdI1WHYw" target="_blank">PyTorch 51.BatchNorm和Dropout层的不协调现象</a>
     |
-
+    <a href="https://mp.weixin.qq.com/s/rnbZY3eZevTAggL0gkiw_A" target="_blank">Google Cloud-如何避免ML中一些坑</a>
+    |
 
 <!--   <br /> -->
 
