--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -454,6 +454,8 @@
     |
     <a href="http://www.ecomp.poli.br/~wcci2018/" target="_blank">IJCNN</a>
     |
+    <a href="https://mamsap.it.deakin.edu.au/pakdd18/prada-research.net/pakdd18/index.php/conference-program/index.html" target="_blank">PAKDD</a>
+    |
     <a href="https://www.ecir2018.org/ecir-proceedings/" target="_blank">ECIR</a>
     |
     <a href="http://wise2018.connect.rs/" target="_blank">WISE</a>
