--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -182,6 +182,8 @@
     |
     <a href="https://conf.researchr.org/track/icpc-2021/icpc-2021-research?#program" target="_blank">ICPC</a>
     |
+    <a href="http://2021.issre.net/news" target="_blank">ISSRE</a>
+    |
     <a href="https://www.pakdd2021.org/Proceedings/proceeding" target="_blank">PAKDD [<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75762-5.pdf" target="_blank">Part I</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75765-6.pdf" target="_blank">Part II</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75768-7.pdf" target="_blank">Part III</a>]</a>
     |
     <a href="https://aclanthology.org/events/naacl-2021/" target="_blank">NAACL (<a href="https://2021.naacl.org/program/" target="_blank">Conference Program</a>) </a>
@@ -256,6 +258,8 @@
     <a href="https://mp.weixin.qq.com/s/yPGMa3mNZsp3qXbRp8hvuQ" target="_blank">今日arXiv精选 | 14篇EMNLP 2021最新论文</a>
     |
     <a href="https://mp.weixin.qq.com/s/HV6oTkDJhnONcIEAA1ThDg" target="_blank">今日arXiv精选 | 12篇EMNLP 2021最新论文</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/0jNVRht7csYHKFkFbc0pSg" target="_blank">今日arXiv精选 | 15篇EMNLP 2021最新论文</a>
     |
 <!--     <br /> -->   
 <h4>2020</h4>
