--- a/pages/news.html
+++ b/pages/news.html
@@ -70,6 +70,9 @@
 <hr align="left" width="100%">
 <ul>
     <li style="text-align:justify">
+      [2021/08/28-29]&nbsp;&nbsp; I participate in the national senior seminar of AI online, and the certificate of comletion is <a href="../certificate/AI_workshop_20210908.pdf" target="_blank">here</a>.
+    </li>
+    <li style="text-align:justify">
       [2021/08/17]&nbsp;&nbsp; I successfully passed Nebula Graph Certifications and being recognized as the <a href="../certificate/NGCI0001004(En).pdf" target="_blank">Nebula Graph Certified Insider (NGCI)</a> and <a href="../certificate/NGCP0001006(En).pdf" target="_blank">Nebula Graph Certified Professional (NGCP)</a>. This activity notice is <a href="https://mp.weixin.qq.com/s/D45N0N8PByZFRa282r2HAA" target="_blank">here</a>.
     </li>
     <li style="text-align:justify">
