--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -178,11 +178,15 @@
     |
     <a href="https://www.aclweb.org/anthology/events/naacl-2021/" target="_blank">NAACL</a>
     |
+    <a href="https://icsme2021.github.io/program/Accepted.html" target="_blank">ICSME</a>
+    |
     <a href="https://saner2021.shidler.hawaii.edu/accepted#research" target="_blank">SANER</a>
     |
-    <a href="https://conf.researchr.org/track/icpc-2021/icpc-2021-research?#program" target="_blank">ICPC</a>
+    <a href="https://conf.researchr.org/track/esem-2021/esem-2021-emerging-results-and-vision-papers#event-overview" target="_blank">ESEM</a>
     |
     <a href="http://2021.issre.net/news" target="_blank">ISSRE</a>
+    | 
+    <a href="https://conf.researchr.org/track/icpc-2021/icpc-2021-research?#program" target="_blank">ICPC</a>
     |
     <a href="https://www.pakdd2021.org/Proceedings/proceeding" target="_blank">PAKDD [<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75762-5.pdf" target="_blank">Part I</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75765-6.pdf" target="_blank">Part II</a>][<a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-75768-7.pdf" target="_blank">Part III</a>]</a>
     |
@@ -261,6 +265,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/0jNVRht7csYHKFkFbc0pSg" target="_blank">今日arXiv精选 | 15篇EMNLP 2021最新论文</a>
     |
+    <a href="https://mp.weixin.qq.com/s/NEUw3R-nn8uNSbmEjNf5ng" target="_blank">今日arXiv精选 | 31篇EMNLP 2021最新论文</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
@@ -282,9 +288,7 @@
     <a href="https://conf.researchr.org/track/ase-2020/ase-2020-papers?track=ASE%20Research%20Papers#event-overview" target="_blank">ASE</a>
     |
     <a href="https://2020.esec-fse.org/program/program-esecfse-2020/" target="_blank">FSE ESEC</a>
-    |
-    <a href="https://saner2020.csd.uwo.ca/accepted" target="_blank">SANER</a>
-    |   
+    | 
     ISWC [<a href="https://link.springer.com/book/10.1007/978-3-030-62419-4" target="_blank">Part I</a>][<a href="https://link.springer.com/book/10.1007/978-3-030-62466-8" target="_blank">Part II</a>][<a href="http://ceur-ws.org/Vol-2721/" target="_blank">Posters, Demos, and Industry Tracks</a>]
     |
     <a href="https://2020.emnlp.org/papers/main" target="_blank">EMNLP</a>
@@ -305,6 +309,12 @@
     |
     <a href="https://eccv2020.eu/accepted-papers/" target="_blank">ECCV</a>
     |
+    <a href="https://icsme2020.github.io/program/Accepted.html" target="_blank">ICSME</a>
+    | 
+    <a href="https://saner2020.csd.uwo.ca/accepted" target="_blank">SANER</a>
+    |
+    <a href="https://ieeexplore.ieee.org/xpl/conhome/9250925/proceeding" target="_blank">ISSRE</a>
+    | 
     <a href="https://conf.researchr.org/program/icpc-2020/program-icpc-2020/" target="_blank">ICPC</a>
     |
     <a href="https://link.springer.com/conference/nlpcc" target="_blank">NLPCC</a>
@@ -393,7 +403,11 @@
     <a href="https://fse.iacr.org/2019/program.html" target="_blank">FSE ESEC</a>
     |  
     <a href="https://saner2019.github.io/program/accepted.html" target="_blank">SANER</a>
-    |  
+    |
+    <a href="http://eseiw2019.com/accepted-papers/" target="_blank">ESEM</a>
+    |
+    <a href="https://ieeexplore.ieee.org/xpl/conhome/8967509/proceeding" target="_blank">ISSRE</a>
+    |    
     <a href="https://www.aclweb.org/anthology/events/emnlp-2019/#d19-1" target="_blank">EMNLP-IJCNLP</a>
     |
     <a href="https://iswc2019.semanticweb.org/proceedings/" target="_blank">ISWC</a>
@@ -414,6 +428,8 @@
     |
     <a href="http://www.icmr2019.org/program/" target="_blank">ICMR</a>
     |
+    <a href="https://icsme2019.github.io/accepted_papers.html" target="_blank">ICSME</a>
+    | 
     <a href="https://conf.researchr.org/program/icpc-2019/program-icpc-2019/" target="_blank">ICPC</a>
     |
     <a href="http://ieeebibm.org/BIBM2019/AcceptedPapers.html" target="_blank">BIBM</a>
@@ -518,7 +534,8 @@
 
     <a href="https://mp.weixin.qq.com/s/q8s9Ol3S-fHuQuoSB_0EbA" target="_blank">科普帖：深度学习中GPU和显存分析</a>
     |
-
+    <a href="https://mp.weixin.qq.com/s/zAGHL5C-9Uw_BcO33HE9OA" target="_blank">个人深度学习工作站配置指南</a>
+    |
 
 <!--   <br /> -->
 
