--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -120,6 +120,9 @@
     <li><strong><font color="#874e26"><a href="../Book/semantic_web.pdf">语义网基础教程</a></font></strong></li>
 
 
+    <li><strong><font color="#874e26"><a href="https://web.stanford.edu/~jurafsky/slp3/">Speech and Language Processing (3rd ed. draft)</a></font></strong></li>
+
+    
     <li><strong><font color="#874e26"><a href="https://github.com/shengyp/book_recommender">Book Recommendation</a></font></strong></li>
 </ul>
 
@@ -266,6 +269,8 @@
     <a href="https://mp.weixin.qq.com/s/0jNVRht7csYHKFkFbc0pSg" target="_blank">今日arXiv精选 | 15篇EMNLP 2021最新论文</a>
     |
     <a href="https://mp.weixin.qq.com/s/NEUw3R-nn8uNSbmEjNf5ng" target="_blank">今日arXiv精选 | 31篇EMNLP 2021最新论文</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Ib8qMUnKGYCGzz494ZKWaA" target="_blank">刷完EMNLP 2021论文列表，我们挑出了这8篇预训练相关必读论文</a>
     |
 <!--     <br /> -->   
 <h4>2020</h4>
