--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -122,7 +122,7 @@
 
     <li><strong><font color="#874e26"><a href="https://web.stanford.edu/~jurafsky/slp3/">Speech and Language Processing (3rd ed. draft)</a></font></strong></li>
 
-    
+
     <li><strong><font color="#874e26"><a href="https://github.com/shengyp/book_recommender">Book Recommendation</a></font></strong></li>
 </ul>
 
@@ -585,6 +585,8 @@
 <br />
 
     <a href="https://mp.weixin.qq.com/s/aACazMGEIkUHRnLADltGwg" target="_blank">10秒！GitHub工程团队转移到Codespaces，开发环境「即开即用」</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/bwf6y8Hasd7fsfpy-8SKSg" target="_blank">始于 Jupyter Notebooks：一份全面的初学者实用指南</a>
     |
     <a href="https://mp.weixin.qq.com/s/9sXeG3wVdiigKrXGycHe1g" target="_blank">Jupyter Notebook 的那些高效率操作</a>
     |
