--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -272,6 +272,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/Ib8qMUnKGYCGzz494ZKWaA" target="_blank">刷完EMNLP 2021论文列表，我们挑出了这8篇预训练相关必读论文</a>
     |
+    <a href="https://mp.weixin.qq.com/s/ixGHKzqr7xR3ObVx6kmNvg" target="_blank">今日arXiv精选 | 28篇EMNLP 2021最新论文</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
