--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -108,10 +108,17 @@
     <li><strong><font color="#874e26"><a href="https://arxiv.org/pdf/2009.05426.pdf">Semantic Relations and Deep Learning  [<a href="https://mp.weixin.qq.com/s/sot4I-anfuTe8kfXHEj34w" target="_blank">Report</a>]</a></font></strong></li>
 
 
+    <li><strong><font color="#874e26"><a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-72357-6.pdf">Artificial Intelligence (Knowledge Graphs involved)</a></font></strong></li>
+
+
+
     <li><strong><font color="#874e26"><a href="https://cse.msu.edu/~mayao4/dlg_book/">Deep Learning on Graphs</a></font></strong></li>
 
 
     <li><strong><font color="#874e26"><a href="https://www.cs.mcgill.ca/~wlh/grl_book/files/GRL_Book.pdf">Graph Representation Learning</a></font></strong></li>
+
+
+    <li><strong><font color="#874e26"><a href="https://mitpress.mit.edu/books/introduction-lifted-probabilistic-inference">An Introduction to Lifted Probabilistic Inference</a></font></strong></li>
 
 
     <li><strong><font color="#874e26"><a href="#">知识图谱: 概念与技术</a><a href="https://mp.weixin.qq.com/s/eiHhq8B0cc5XDirD9pszyA" target="_blank">  [第一章 (<a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-1.pdf" target="_blank">Part I</a>, <a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-2.pdf" target="_blank">II</a>, <a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-3.pdf" target="_blank">III</a>)]</a></font></strong></li>
