--- a/pages/publications.html
+++ b/pages/publications.html
@@ -65,11 +65,11 @@
     border-left: 5px solid #0084f2;">Edited Books/Chapters/Proceedings</h3>
 
     <br />
-    <ol start="1">
-        <li><b>Domain-Specific Knowledge Graph Construction (<a href="Book/DKGC.pdf" target="_blank">Original Copy</a>, <a href="#" target="_blank">Translated Copy</a>)</b>
-            <br />
-<!--             &nbsp;&nbsp;&nbsp;&nbsp; -->
-            <a href="Book/en/preface_en.pdf" target="_blank">Preface
+<!--     <ol start="1">
+        <li><b>Domain-Specific Knowledge Graph Construction (<a href="Book/DKGC.pdf" target="_blank">Original Copy</a>, <a href="#" target="_blank">Translated Copy</a>)</b> -->
+<!--             <br />
+            &nbsp;&nbsp;&nbsp;&nbsp; -->
+            <<!-- a href="Book/en/preface_en.pdf" target="_blank">Preface
             </a>,
             <a href="Book/en/contents_en.pdf" target="_blank">Contents
             </a>,
@@ -83,10 +83,10 @@
             </a>, <a href="Book/en/glossary_en.pdf" target="_blank">Glossary
             </a>, <a href="Book/en/references_en.pdf" target="_blank">References
             </a>, <a href="Book/en/index_en.pdf" target="_blank">Index
-            </a> <b> (Original Copy with Detailed Chapters)</b>.
-            <br />
+            </a> <b> (Original Copy with Detailed Chapters)</b>. -->
+            <!-- <br /> --> 
 <!--             &nbsp;&nbsp;&nbsp;&nbsp; -->
-            <a href="http://ieeeaccess.ieee.org/" target="_blank">Preface
+<!--             <a href="http://ieeeaccess.ieee.org/" target="_blank">Preface
             </a>,
             <a href="http://ieeeaccess.ieee.org/" target="_blank">Contents
             </a>,
@@ -101,16 +101,17 @@
             </a>, <a href="http://ieeeaccess.ieee.org/" target="_blank">References
             </a>, <a href="http://ieeeaccess.ieee.org/" target="_blank">Index
             </a> <b> (Corresponding Translated Copy with Detailed Chapters)</b>.
-            <br />
+            <br /> -->
 <!--             &nbsp;&nbsp;&nbsp;&nbsp; -->
-            Translators: <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.eastmountyxz.com/" target="_blank">Xiuzhang Yang</a>, and <a href="http://www.tjudb.cn/dbgroup/Xin_Wang_zh#.E5.AD.A6.E6.9C.AF.E8.AE.BA.E6.96.87" target="_blank">Xin Wang</a>
+<!--             Translators: <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.eastmountyxz.com/" target="_blank">Xiuzhang Yang</a>, and <a href="http://www.tjudb.cn/dbgroup/Xin_Wang_zh#.E5.AD.A6.E6.9C.AF.E8.AE.BA.E6.96.87" target="_blank">Xin Wang</a>
             <br />
             &nbsp;&nbsp;&nbsp;&nbsp;
-           <!--  I am honored to lead a comprehansive translating work towards this book, from now on, it is the fourth book used to introduce KG techniques.
+            I am honored to lead a comprehansive translating work towards this book, from now on, it is the fourth book used to introduce KG techniques.
             <font color="#FF0000">To appear</font>. -->
-        </li>
-    </ol>
+<!--         </li>
+    </ol> --> 
 
+    
 <h3 style="
     color: #0084f2;
     padding-left: 5px;
