--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -550,7 +550,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/zAGHL5C-9Uw_BcO33HE9OA" target="_blank">个人深度学习工作站配置指南</a>
     |
-
+    <a href="https://mp.weixin.qq.com/s/4JioT7nqIJv9KIZXbJ3Vvw" target="_blank">CPU和GPU，谁才是小学生？</a>
+    |
 <!--   <br /> -->
 
 <br />
