--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1089,6 +1089,8 @@ NLP/KG field：
     |
     <a href="https://xin-xia.github.io/" target="_blank">Xin Xia</a>
     |
+    <a href="https://yunc.me/" target="_blank">Yun Chen</a>
+    |
   <br />
   <br />
 SE field：
