--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -212,6 +212,8 @@
     |
     <a href="http://139.159.245.147/program/proceedings" target="_blank">APWeb-WAIM</a>
     |
+    <a href="https://inlg2021.github.io/pages/papers.html" target="_blank">INLG</a>
+    |
     <a href="http://www.cips-cl.org/static/CCL2021/index.html" target="_blank">CCL</a>
     |
     <a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">AKBC</a>
@@ -347,6 +349,8 @@
     |
     <a href="http://www.cips-cl.org/static/anthology/CCL-2020/CCL2020.html" target="_blank">CCL</a>
     |
+    <a href="https://aclanthology.org/volumes/2020.inlg-1/" target="_blank">INLG</a>
+    |
     <br />
     <br />
     <a href="https://mp.weixin.qq.com/s/t1rUzfqctiUiuecBBxdnEg" target="_blank">Highlighted 8 Tutorials in ACL 2020</a>
@@ -461,6 +465,8 @@
     <a href="https://ksem2019.unipi.gr/program.html" target="_blank">KSEM</a>
     |
     <a href="http://cfm.uestc.edu.cn/apwebwaim2019/accepted.html" target="_blank">APWeb-WAIM</a>
+    |
+    <a href="https://www.inlg2019.com/acceptedpaperlist" target="_blank">INLG</a>
     |
     <a href="http://wise2019.comp.polyu.edu.hk/accept.html" target="_blank">WISE</a>
     |
