--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -610,6 +610,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/8AKInHu-_dqmtPXZQgWzsg" target="_blank">Web版VS Code上线：最好用的IDE终于发布网页版，然而微软发完秒删</a>
     |
+    <a href="https://mp.weixin.qq.com/s/21Nqo0Jbp4PLS_CJtVcpwQ" target="_blank">薅羊毛 Colab使用外部数据的7种方法！</a>
+    |
 <!--   <br /> -->
 
 <br />
@@ -1104,6 +1106,8 @@ SE field：
     <a href="https://liuhuigmail.github.io/" target="_blank">Hui Liu</a>
     |
     <a href="http://www.lamda.nju.edu.cn/lim/" target="_blank">Ming Li</a>
+    | 
+    <a href="https://liliweise.github.io/index.html" target="_blank">Lili Wei</a>
     |       
   <br />
   <br />
