--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -178,7 +178,7 @@
     |
     <a href="https://2021.esec-fse.org/program/program-fse-2021/" target="_blank">FSE ESEC</a>
     |
-    <a href="https://2021.emnlp.org/papers" target="_blank">ENNLP</a>
+    <a href="https://2021.emnlp.org/papers" target="_blank">EMNLP</a>
     |    
     <a href="https://iswc2021.semanticweb.org/under-construction" target="_blank">ISWC</a> (<a href="https://iswc2021.semanticweb.org/accepted-papers" target="_blank">Accepted papers</a>)
     |
