--- a/pages/news.html
+++ b/pages/news.html
@@ -70,6 +70,9 @@
 <hr align="left" width="100%">
 <ul>
     <li style="text-align:justify">
+      [2021/09/27]&nbsp;&nbsp; I have awarded as a senior member of China Computer Federation, and the corresponding certificate is <a href="../certificate/CCF高级会员证书.pdf" target="_blank">here</a>.
+    </li>
+    <li style="text-align:justify">
       [2021/08/28-29]&nbsp;&nbsp; I participate in the national senior seminar of AI online, and the certificate of comletion is <a href="../certificate/AI_workshop_20210908.pdf" target="_blank">here</a>.
     </li>
     <li style="text-align:justify">
