--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -257,6 +257,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/srY9gMjhaJb38IMYsg6GRA" target="_blank">ACL 2021 | 今年NLP的这些论文，你不能错过！</a>
     |
+    <a href="https://mp.weixin.qq.com/s/CoLQ2xqeW02WW_1gRsinig" target="_blank">ACL 2021 | 预训练模型的改进与应用</a>
+    |
     <a href="https://www.toutiao.com/i6992857338701038093/?tt_from=weixin&utm_campaign=client_share&wxshare_count=1&timestamp=1628239873&app=news_article&utm_source=weixin&utm_medium=toutiao_android&use_new_style=1&req_id=202108061651130101510781485600D56F&share_token=3edea48b-ad9f-4ed1-b7ad-87161c4e95d0&group_id=6992857338701038093" target="_blank">腾讯50余篇论文入选NLP顶会ACL 腾讯AI Lab解读两项NLP成果</a>
     |
     <a href="https://mp.weixin.qq.com/s/RhcHvRWHRnYUg6u9vXoIGA" target="_blank">从ACL 2021中看NLP在医疗领域应用的发展，附资源下载</a>
@@ -585,7 +587,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/rnbZY3eZevTAggL0gkiw_A" target="_blank">Google Cloud-如何避免ML中一些坑</a>
     |
-
+    <a href="https://mp.weixin.qq.com/s/rOL0wHGW-Krh7tyjZ4AiHQ" target="_blank">Batch Size对神经网络训练的影响</a>
+    |
 <!--   <br /> -->
 
 <br />
