--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -184,6 +184,8 @@
     |
     <a href="https://2021.ecmlpkdd.org/?page_id=1811" target="_blank">ECML-PKDD</a>
     |
+    <a href="https://www.cikm2021.org/accepted-papers" target="_blank">CIKM</a>
+    |
     <a href="https://2021.ieeeicme.org/" target="_blank">ICME</a>
     |
     <a href="https://icmr2021.org/index.html" target="_blank">ICMR</a>
