--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1075,7 +1075,6 @@ NLP/KG field：
 <!-- Zhejiang University-->
     <a href="https://zxlzr.github.io/" target="_blank">Ningyu Zhang</a>
     |
-
     <a href="https://person.zju.edu.cn/jieyang#0" target="_blank">Jie Yang</a>
     |
 <!-- Southeast University-->
@@ -1084,7 +1083,10 @@ NLP/KG field：
 <!-- Southwestern University of Finance and Economics -->
     <a href="https://it.swufe.edu.cn/info/1107/7549.htm" target="_blank">Qiang Gao</a>
     |
+<!-- HIT -->
     <a href="https://wilburone.github.io/index.html#" target="_blank">Lifu Huang</a>
+    |
+    <a href="hhttp://alexyxwang.com/about/" target="_blank">Yuxuan Wang</a>
     |
     <a href="http://jiyang3.web.engr.illinois.edu/" target="_blank">Carl Yang</a>
     |
