--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -566,6 +566,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/4JioT7nqIJv9KIZXbJ3Vvw" target="_blank">CPU和GPU，谁才是小学生？</a>
     |
+    <a href="https://mp.weixin.qq.com/s/HKZdllLPMyJcGPHtkuvcZQ" target="_blank">GPU多卡并行训练总结（以pytorch为例）</a>
+    |
 <!--   <br /> -->
 
 <br />
