--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -222,6 +222,8 @@
     |
     <a href="http://www.cips-cl.org/static/CCL2021/index.html" target="_blank">CCL</a>
     |
+    <a href="https://recsys.acm.org/recsys21/accepted-contributions/" target="_blank">ACM RecSys</a>
+    |
     <a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">AKBC</a>
     |
     <a href="http://icbk2021.zhonghuapu.com/call/" target="_blank">ICBK</a>
@@ -290,6 +292,8 @@
     <a href="https://mp.weixin.qq.com/s/Ib8qMUnKGYCGzz494ZKWaA" target="_blank">刷完EMNLP 2021论文列表，我们挑出了这8篇预训练相关必读论文</a>
     |
     <a href="https://mp.weixin.qq.com/s/ixGHKzqr7xR3ObVx6kmNvg" target="_blank">今日arXiv精选 | 28篇EMNLP 2021最新论文</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/FIcvT8m3MxkZO5U8Iylvig" target="_blank">EMNLP 2021中预训练模型最新研究进展</a>
     |
 <!--     <br /> -->   
 <h4>2020</h4>
