--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -227,7 +227,7 @@
     |
     <a href="https://recsys.acm.org/recsys21/accepted-contributions/" target="_blank">ACM RecSys</a>
     |
-    <a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">AKBC</a>
+    <a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">AKBC</a> (workshop on <a href="https://akbc-cskb.github.io/#contact" target="_blank">CSKB</a> in AKBC)
     |
     <a href="http://icbk2021.zhonghuapu.com/call/" target="_blank">ICBK</a>
     |
@@ -369,6 +369,8 @@
     |
     <a href="https://aclanthology.org/volumes/2020.inlg-1/" target="_blank">INLG</a>
     |
+    <a href="https://www.akbc.ws/2020/" target="_blank">AKBC</a>
+    |
     <br />
     <br />
     <a href="https://mp.weixin.qq.com/s/t1rUzfqctiUiuecBBxdnEg" target="_blank">Highlighted 8 Tutorials in ACL 2020</a>
@@ -493,6 +495,8 @@
     <a href="http://www.ccks2019.cn/?page_id=49" target="_blank">CCKS</a>
     |
     <a href="http://39.104.72.142/icbk2019/session-details.html" target="_blank">ICBK</a>
+    |
+    <a href="https://www.akbc.ws/2019/" target="_blank">AKBC</a>
     |
     <br />
     <br />
@@ -1061,6 +1065,8 @@ NLP/KG field：
     |
     <a href="http://staff.ustc.edu.cn/~tongxu/" target="_blank">Tong Xu</a>
     |
+    <a href="https://yuchenlin.xyz/" target="_blank">Yuchen Lin</a>
+    |    
 <!-- Australia -->
     <a href="https://shiruipan.github.io/" target="_blank">Shirui Pan</a>
     |
