--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -639,6 +639,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/21Nqo0Jbp4PLS_CJtVcpwQ" target="_blank">薅羊毛 Colab使用外部数据的7种方法！</a>
     |
+    <a href="https://mp.weixin.qq.com/s/pCTh3FhCLMkebf4PNzgLqg" target="_blank">【Python】Python环境配置保姆教程（Anaconda、Jupyter、GPU环境）！</a>
+    |
 <!--   <br /> -->
 
 <br />
