--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -299,6 +299,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/FIcvT8m3MxkZO5U8Iylvig" target="_blank">EMNLP 2021中预训练模型最新研究进展</a>
     |
+    <a href="https://mp.weixin.qq.com/s/DERVevCHXamsE4sbT9jLHA" target="_blank">知识图谱领域有哪些最新研究进展？不妨从EMNLP 2021录用论文寻找答案</a>
+    |
     <a href="https://mp.weixin.qq.com/s/-NsXf8v6309BqCRlJLJFwA" target="_blank">Recsys2021 | 推荐系统论文整理和导读</a>
     |
 <!--     <br /> -->   
@@ -640,6 +642,8 @@
     <a href="https://mp.weixin.qq.com/s/21Nqo0Jbp4PLS_CJtVcpwQ" target="_blank">薅羊毛 Colab使用外部数据的7种方法！</a>
     |
     <a href="https://mp.weixin.qq.com/s/pCTh3FhCLMkebf4PNzgLqg" target="_blank">【Python】Python环境配置保姆教程（Anaconda、Jupyter、GPU环境）！</a>
+    |
+    <a href="https://www.toutiao.com/i6926742934809575949/?tt_from=weixin&utm_campaign=client_share&wxshare_count=1&timestamp=1633962507&app=news_article&utm_source=weixin&utm_medium=toutiao_android&use_new_style=1&req_id=202110112228270101510732285F126BE8&share_token=c0ecdfb7-7426-44b9-b1c8-ed6f9df42be4&group_id=6926742934809575949" target="_blank">Debug无忧！清华校友打造编程神器：反向追踪变量、数据流等</a>
     |
 <!--   <br /> -->
 
@@ -1020,6 +1024,8 @@
 <!--  <br /> -->
 <!-- USA -->
     <a href="http://gerard.demelo.org/" target="_blank">Gerard de Melo</a> 
+    |
+    <a href="https://www.cs.dartmouth.edu/~soroush/index.html" target="_blank">Soroush Vosoughi</a> 
     |
     <a href="http://nlp.cs.rpi.edu/hengji.html" target="_blank">Heng Ji</a> 
     |
