--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -221,6 +221,8 @@
     |
     <a href="http://139.159.245.147/program/proceedings" target="_blank">APWeb-WAIM</a>
     |
+    <a href="http://wise-conferences.org/2021/program.html" target="_blank">WISE</a>
+    |
     <a href="https://inlg2021.github.io/pages/papers.html" target="_blank">INLG</a>
     |
     <a href="http://www.cips-cl.org/static/CCL2021/index.html" target="_blank">CCL</a>
@@ -368,6 +370,8 @@
     <a href="https://bigdataieee.org/BigData2020/AcceptedPapers.html" target="_blank">IEEE BigData (<a href="https://www.computer.org/csdl/proceedings/big-data/2020/1s645BaTzVu" target="_blank">Download</a>)</a>
     |
     <a href="http://www.cips-cl.org/static/anthology/CCL-2020/CCL2020.html" target="_blank">CCL</a>
+    |
+    <a href="https://wasp.cs.vu.nl/WISE2020/accept.html" target="_blank">WISE</a>
     |
     <a href="https://aclanthology.org/volumes/2020.inlg-1/" target="_blank">INLG</a>
     |
