--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -148,6 +148,8 @@
     |
     <a href="https://2022.ieeeicme.org/" target="_blank">ICME</a>
     |
+    <a href="https://2022.naacl.org/calls/tutorials/" target="_blank">NAACL</a>
+    |
     <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
     |
     <br/>
@@ -278,6 +280,8 @@
     <a href="https://mp.weixin.qq.com/s/gNXQdZFFO_uoGR43rVmW6Q" target="_blank">KDD2021 |时序图/动态图/时序图谱/时空图相关论文一览</a>
     |
     <a href="https://mp.weixin.qq.com/s/S3xMO6HP06es65cy0cd3bg" target="_blank">THUIR师生论文获CIKM2021录用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/xpRZHcJYFlno8rD4qfudFQ" target="_blank">CIKM 2021 | 推荐系统相关论文分类整理</a>
     |
     <a href="https://mp.weixin.qq.com/s/q2nuRfZqE4ptjKAt90NDTw" target="_blank">快讯｜北邮GAMMA Lab的四篇工作被CIKM 2021接收</a>
     |
