--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -152,6 +152,8 @@
     |
     <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
     |
+    <a href="https://www.icwsm.org/2022/index.html/#fullpapers" target="_blank">ICWSM</a>
+    |
     <br/>
     <a href="https://zhuanlan.zhihu.com/p/419669070?utm_source=wechat_session&utm_medium=social&utm_oi=1305131945592676352" target="_blank">ICLR 2022图学习领域都在研究什么？Open Review投稿文章一览</a>
     |
@@ -236,6 +238,8 @@
     <a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">AKBC</a> (workshop on <a href="https://akbc-cskb.github.io/#contact" target="_blank">CSKB</a> in AKBC)
     |
     <a href="http://icbk2021.zhonghuapu.com/call/" target="_blank">ICBK</a>
+    |
+    <a href="https://www.icwsm.org/2021/index.html" target="_blank">ICWSM</a>
     |
     <a href="http://ceur-ws.org/" target="_blank">Doctoral Consortium</a>
     |
