--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -237,6 +237,8 @@
     |
     <a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">AKBC</a> (workshop on <a href="https://akbc-cskb.github.io/#contact" target="_blank">CSKB</a> in AKBC)
     |
+    <a href="https://ccir2021.dlufl.edu.cn/index.html" target="_blank">CCIR</a>
+    |
     <a href="http://icbk2021.zhonghuapu.com/call/" target="_blank">ICBK</a>
     |
     <a href="https://www.icwsm.org/2021/index.html" target="_blank">ICWSM</a>
@@ -384,6 +386,8 @@
     <a href="https://wasp.cs.vu.nl/WISE2020/accept.html" target="_blank">WISE</a>
     |
     <a href="https://aclanthology.org/volumes/2020.inlg-1/" target="_blank">INLG</a>
+    |
+    <a href="http://www.cvnis.net/ccir2020/index.html" target="_blank">CCIR</a>
     |
     <a href="https://www.akbc.ws/2020/" target="_blank">AKBC</a>
     |
