--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -629,6 +629,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/rOL0wHGW-Krh7tyjZ4AiHQ" target="_blank">Batch Size对神经网络训练的影响</a>
     |
+    <a href="https://mp.weixin.qq.com/s/JjkyzBN68pDCBQhQWQTwJw" target="_blank">高效 PyTorch： 如何消除训练瓶颈</a>
+    |
     <a href="https://mp.weixin.qq.com/s/s40PeQp7shXGJJ_L9NIvkw" target="_blank">CNN调优总结</a>
     |
 <!--   <br /> -->
