--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -150,6 +150,8 @@
     |
     <a href="https://2022.naacl.org/calls/tutorials/" target="_blank">NAACL</a>
     |
+    <a href="https://www.wsdm-conference.org/2022/" target="_blank">WSDM</a>
+    |
     <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
     |
     <a href="https://www.icwsm.org/2022/index.html/#fullpapers" target="_blank">ICWSM</a>
@@ -345,6 +347,8 @@
     | 
     ISWC [<a href="https://link.springer.com/book/10.1007/978-3-030-62419-4" target="_blank">Part I</a>][<a href="https://link.springer.com/book/10.1007/978-3-030-62466-8" target="_blank">Part II</a>][<a href="http://ceur-ws.org/Vol-2721/" target="_blank">Posters, Demos, and Industry Tracks</a>]
     |
+    <a href="https://kr2020.inf.unibz.it/" target="_blank">KR</a> (<a href="https://proceedings.kr.org/2020/" target="_blank">Download</a>)
+    | 
     <a href="https://2020.emnlp.org/papers/main" target="_blank">EMNLP</a>
     |
     <a href="https://ecmlpkdd2020.net/programme/accepted/" target="_blank">ECML-PKDD</a>
@@ -559,6 +563,8 @@
     |
     <a href="http://iswc2018.semanticweb.org/accepted-papers/" target="_blank">ISWC</a>
     |
+    <a href="http://reasoning.eas.asu.edu/kr2018/" target="_blank">KR</a> (<a href="http://reasoning.eas.asu.edu/kr2018/" target="_blank">Download</a>)
+    | 
     <a href="http://www.ecmlpkdd2018.org/accepted-papers-by-track-2/" target="_blank">ECML-PKDD</a>
     |
     <a href="http://www.ecomp.poli.br/~wcci2018/" target="_blank">IJCNN</a>
