--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -249,6 +249,8 @@
     |
     <a href="https://www.icwsm.org/2021/index.html" target="_blank">ICWSM</a>
     |
+    <a href="http://lr2020.iit.demokritos.gr/accepted/index.html" target="_blank">IJCLR</a>
+    |
     <a href="http://ceur-ws.org/" target="_blank">Doctoral Consortium</a>
     |
 <!-- add more venue paper -->
@@ -640,6 +642,8 @@
     <a href="https://mp.weixin.qq.com/s/JjkyzBN68pDCBQhQWQTwJw" target="_blank">高效 PyTorch： 如何消除训练瓶颈</a>
     |
     <a href="https://mp.weixin.qq.com/s/s40PeQp7shXGJJ_L9NIvkw" target="_blank">CNN调优总结</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/cnOa649-VihZdt45V-gBoQ" target="_blank">PyTorch多卡分布式训练：DistributedDataParallel (DDP) 简要分析</a>
     |
 <!--   <br /> -->
 
