--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -152,9 +152,15 @@
     |
     <a href="https://www.wsdm-conference.org/2022/" target="_blank">WSDM</a>
     |
+    <a href="https://conf.researchr.org/home/ase-2022" target="_blank">ASE</a>
+    | 
+    <a href="https://2022.esec-fse.org/track/fse-2022-research-papers" target="_blank">FSE ESEC</a>
+    | 
     <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
     |
     <a href="https://www.icwsm.org/2022/index.html/#fullpapers" target="_blank">ICWSM</a>
+    |
+    <a href="https://sigspatial2021.sigspatial.org/cfp2022/" target="_blank">ACM SIGSPATIAL</a>
     |
     <br/>
     <a href="https://zhuanlan.zhihu.com/p/419669070?utm_source=wechat_session&utm_medium=social&utm_oi=1305131945592676352" target="_blank">ICLR 2022图学习领域都在研究什么？Open Review投稿文章一览</a>
@@ -401,6 +407,8 @@
     |
     <a href="https://www.akbc.ws/2020/" target="_blank">AKBC</a>
     |
+    <a href="https://sigspatial2020.sigspatial.org/" target="_blank">ACM SIGSPATIAL</a> (<a href="https://dl.acm.org/doi/proceedings/10.1145/3397536" target="_blank">Download</a>)
+    |
     <br />
     <br />
     <a href="https://mp.weixin.qq.com/s/t1rUzfqctiUiuecBBxdnEg" target="_blank">Highlighted 8 Tutorials in ACL 2020</a>
@@ -527,6 +535,8 @@
     <a href="http://39.104.72.142/icbk2019/session-details.html" target="_blank">ICBK</a>
     |
     <a href="https://www.akbc.ws/2019/" target="_blank">AKBC</a>
+    |
+    <a href="https://sigspatial2019.sigspatial.org/" target="_blank">ACM SIGSPATIAL</a>
     |
     <br />
     <br />
