--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -655,6 +655,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/cnOa649-VihZdt45V-gBoQ" target="_blank">PyTorch多卡分布式训练：DistributedDataParallel (DDP) 简要分析</a>
     |
+    <a href="https://mp.weixin.qq.com/s/qDDKs2ZxcJVwKrjrbyIpVA" target="_blank">综述：PyTorch显存机制分析</a>
+    |
 <!--   <br /> -->
 
 <br />
