--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -148,6 +148,8 @@
     |
     <a href="https://2022.ieeeicme.org/" target="_blank">ICME</a>
     |
+    <a href="https://sigir.org/sigir2022/" target="_blank">SIGIR</a>
+    |
     <a href="https://2022.naacl.org/calls/tutorials/" target="_blank">NAACL</a>
     |
     <a href="https://www.wsdm-conference.org/2022/" target="_blank">WSDM</a>
