--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -167,6 +167,8 @@
     <br/>
     <a href="https://zhuanlan.zhihu.com/p/419669070?utm_source=wechat_session&utm_medium=social&utm_oi=1305131945592676352" target="_blank">ICLR 2022图学习领域都在研究什么？Open Review投稿文章一览</a>
     |
+    <a href="https://mp.weixin.qq.com/s/S4Tf_cT6XNgbZKwxULn64Q" target="_blank">ICLR 2022 审稿结果统计速览</a>
+    |
     <a href="https://mp.weixin.qq.com/s/9ZZNV_YmOjbeU3OfBYiSCQ" target="_blank">元学习热度不再！ICLR 2022投稿趋势：强化学习榜首，深度学习第二</a>
     |
     <a href="https://mp.weixin.qq.com/s/SDXhFKHhqPNoUEFa33sduA" target="_blank">ACL2022赶会必备，拿来即用之Abstract和Related Work</a>
@@ -260,6 +262,8 @@
     <a href="https://recsys.acm.org/recsys21/accepted-contributions/" target="_blank">ACM RecSys</a>
     |
     <a href="https://openreview.net/group?id=AKBC.ws/2021/Conference#all-submissions" target="_blank">AKBC</a> (workshop on <a href="https://akbc-cskb.github.io/#contact" target="_blank">CSKB</a> in AKBC)
+    |
+    <a href="http://sigkg.cn/ccks2021/" target="_blank">CCKS</a>
     |
     <a href="https://ccir2021.dlufl.edu.cn/index.html" target="_blank">CCIR</a>
     |
