--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -640,6 +640,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/HKZdllLPMyJcGPHtkuvcZQ" target="_blank">GPU多卡并行训练总结（以pytorch为例）</a>
     |
+    <a href="https://mp.weixin.qq.com/s/3Fssy68WCgfp4F6YNeu4vg" target="_blank">拿什么拯救我的 4G 显卡： PyTorch 节省显存的策略总结</a>
+    |
 <!--   <br /> -->
 
 <br />
