--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -697,6 +697,8 @@
 
     <a href="https://mp.weixin.qq.com/s/aACazMGEIkUHRnLADltGwg" target="_blank">10秒！GitHub工程团队转移到Codespaces，开发环境「即开即用」</a>
     |
+    <a href="https://mp.weixin.qq.com/s/ho2tH80vHxdm6XBW92hpAA" target="_blank">Pycharm那些隐藏的实用小技巧，yyds！</a>
+    |
     <a href="https://mp.weixin.qq.com/s/bwf6y8Hasd7fsfpy-8SKSg" target="_blank">始于 Jupyter Notebooks：一份全面的初学者实用指南</a>
     |
     <a href="https://mp.weixin.qq.com/s/9sXeG3wVdiigKrXGycHe1g" target="_blank">Jupyter Notebook 的那些高效率操作</a>
