--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -247,6 +247,8 @@
     |
     <a href="https://link.springer.com/book/10.1007/978-3-030-77385-4" target="_blank">ESWC</a>
     |
+    <a href="https://link.springer.com/book/10.1007/978-3-030-88480-2" target="_blank">NLPCC</a>
+    |
     <a href="https://iconip2021.apnns.org/" target="_blank">ICONIP</a>
     |
     <a href="https://globecom2021.ieee-globecom.org/" target="_blank">GLOBECOM</a>
