--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -164,6 +164,8 @@
     |
     <a href="https://sigspatial2021.sigspatial.org/cfp2022/" target="_blank">ACM SIGSPATIAL</a>
     |
+    <a href="https://lrec2022.lrec-conf.org/en/" target="_blank">LREC</a>
+    |
     <br/>
     <a href="https://zhuanlan.zhihu.com/p/419669070?utm_source=wechat_session&utm_medium=social&utm_oi=1305131945592676352" target="_blank">ICLR 2022图学习领域都在研究什么？Open Review投稿文章一览</a>
     |
