--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -663,6 +663,8 @@
 
 <br />
 
+    <a href="https://mp.weixin.qq.com/s/YZD3rzTxa8Vqpi6MOGeRLQ" target="_blank">深度学习模型参数量/计算量和推理速度计算</a>
+    |
     <a href="https://mp.weixin.qq.com/s/6OkobO8Y7TELa1QAki18RA" target="_blank">FAIR研究员：重新思考BatchNorm中的"Batch"</a>
     |
     <a href="https://mp.weixin.qq.com/s?__biz=MzA4ODc5NzE1OA==&mid=2653602110&idx=1&sn=59e76b03ea0dcbf0e74a4bd9498af900&chksm=8bfadbb7bc8d52a11140c052fc944ffe2b56c8116d6e67c2b62d90e221c5e16730bfb342e76a&mpshare=1&scene=23&srcid=1110yLFMt0ueQ0d5RkIIvY3y&sharer_sharetime=1636506493427&sharer_shareid=3a6d64bc5a8697aec551fe7bba5051d5#rd" target="_blank">Batch/Layer normalization有什么区别？</a>
