--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -349,6 +349,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/DERVevCHXamsE4sbT9jLHA" target="_blank">知识图谱领域有哪些最新研究进展？不妨从EMNLP 2021录用论文寻找答案</a>
     |
+    <a href="https://mp.weixin.qq.com/s/UT9Zs2_8ZZ2L8c9wqhSzzQ" target="_blank">EMNLP/CIKM2021-三篇图神经网络在知识图谱、文本分类上相关论文</a>
+    |
     <a href="https://mp.weixin.qq.com/s/-NsXf8v6309BqCRlJLJFwA" target="_blank">Recsys2021 | 推荐系统论文整理和导读</a>
     |
 <!--     <br /> -->   
