--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -353,6 +353,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/-NsXf8v6309BqCRlJLJFwA" target="_blank">Recsys2021 | 推荐系统论文整理和导读</a>
     |
+    <a href="https://mp.weixin.qq.com/s/xMS9P8ysLUh779RGpwlUkA" target="_blank">2021年深度学习哪些方向比较新颖，处于上升期或者朝阳阶段，比较有研究潜力？</a>
+    |
 <!--     <br /> -->   
 <h4>2020</h4>
     <a href="https://acl2020.org/program/accepted/#system-demonstrations" target="_blank">ACL</a>
