--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -146,6 +146,8 @@
 <h4>2022</h4>
     <a href="https://infocom2022.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
     |
+    <a href="http://iswc2022.openkg.cn/" target="_blank">ISWC</a>
+    |
     <a href="https://2022.ieeeicme.org/" target="_blank">ICME</a>
     |
     <a href="https://sigir.org/sigir2022/" target="_blank">SIGIR</a>
