--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1224,6 +1224,9 @@ NLP/KG field：
     |
     <a href="https://yunc.me/" target="_blank">Yun Chen</a>
     |
+<!-- 360 -->
+    <a href="https://liuhuanyong.github.io/" target="_blank">Huanyong Liu</a>
+    |
   <br />
   <br />
 SE field：
