--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -159,6 +159,10 @@
     <a href="https://conf.researchr.org/home/ase-2022" target="_blank">ASE</a>
     | 
     <a href="https://2022.esec-fse.org/track/fse-2022-research-papers" target="_blank">FSE ESEC</a>
+    |
+    <a href="https://wcci2022.org/" target="_blank">IJCNN</a>
+    |
+    <a href="http://pakdd.net/" target="_blank">PAKDD</a>
     | 
     <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
     |
