--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -263,6 +263,8 @@
     |
     <a href="http://139.159.245.147/program/proceedings" target="_blank">APWeb-WAIM</a>
     |
+    <a href="http://bigdataieee.org/BigData2021/AcceptedPapers.html" target="_blank">IEEE BigData (<a href="https://www.computer.org/csdl/proceedings/big-data/2020/1s645BaTzVu" target="_blank">Download</a>)</a>
+    |
     <a href="http://wise-conferences.org/2021/program.html" target="_blank">WISE</a>
     |
     <a href="https://inlg2021.github.io/pages/papers.html" target="_blank">INLG</a>
